CHG: technical section text is added

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -25,6 +25,10 @@
         "card2": "",
         "card3": ""
     },
+    "TechnicalSection": {
+        "title": "Sección Técnica",
+        "more": "Ver más"
+    },
     "Network": {
         "title": "Red de Distribución",
         "option1": "Chile",
