--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -3,6 +3,8 @@
         "home": "Inicio",
         "aboutUs": "Quiénes somos",
         "products": "Productos y Servicios",
+        "dropdown1": "Nutrición Vegetal",
+        "dropdown2": "Insecticida Coadyuvante",
         "network": "Red de Distribución",
         "technical": "Sección Técnica",
         "contact": "Contacto"
