CHG: login text added

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -52,5 +52,11 @@
         "typeEmail": "Ingrese Correo Electrónico",
         "contactUs": "Contáctanos",
         "writeUs": "Escribenos un mensaje"
+    },
+    "Login": {
+        "loginNav": "Ingresa",
+        "remember": "Recuerdame",
+        "button": "Ingresar",
+        "login": "Iniciar Sesión"
     }
 }
