--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -4,6 +4,9 @@
         "aboutUs": "Quiénes somos",
         "products": "Productos y Servicios",
         "dropdown1": "Nutrición Vegetal",
+        "dropdown11": "Fertilizantes bioestimulantes",
+        "dropdown12": "Esnmiendas orgánicas",
+        "dropdown13": "Bioestimulantes de raíces",
         "dropdown2": "Insecticida Coadyuvante",
         "network": "Red de Distribución",
         "technical": "Sección Técnica",
