--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -2,7 +2,7 @@
     "Navbar": {
         "home": "Inicio",
         "aboutUs": "Quiénes somos",
-        "products": "Productos y Servicios",
+        "products": "Productos",
         "dropdown1": "Nutrición Vegetal",
         "dropdown11": "Fertilizantes bioestimulantes",
         "dropdown12": "Enmiendas orgánicas",
