--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -21,17 +21,19 @@
     },
     "AboutUs": {
         "title": "Quienes Somos",
-        "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dolor felis, placerat.",
-        "paragraph1": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet ex urna, semper auctor ex lobortis ut. Sed tincidunt ipsum ut mauris viverra viverra. Pellentesque consequat varius pulvinar. Fusce porta nibh vitae nulla aliquam, et bibendum mi facilisis. Curabitur vitae viverra ex, nec viverra metus.",
-        "paragraph2": "Fusce sollicitudin purus quam, eu vestibulum leo dapibus ac. Nulla sed felis rhoncus, faucibus nibh ornare, viverra arcu. Fusce eget dui risus. Curabitur sit amet ante at dolor vulputate dapibus. Pellentesque cursus neque elit. Sed quis ipsum elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec in tincidunt lacus. Cras vitae convallis velit. Suspendisse porttitor suscipit odio. Nunc lacinia vehicula sem, a tincidunt leo mattis quis",
+        "subtitle": "La fuerza de la naturaleza",
+        "paragraph1": "Somos una compañía agrícola Chilena,  dedicada a la fabricación y comercialización de aminoácidos, materia orgánica y aceite, para la nutrición y bioestimulación de las plantas, reactivación de la vida en los suelos y protección de cultivos. Es parte del holding Fiordo Austral, principal productor mundial de proteínas y aceites elaborados a partir del SALMÓN.",
+        "paragraph2": "Las características diferenciadoras  del Salmón como materia prima son únicas. Su origen marino le confieren una de las proteínas de más alta calidad biológica, por lo que a través de distintos procesos industriales, es posible obtener valiosas combinaciones de aminoácidos y péptidos, una rica materia orgánica liquida y aceites esenciales omega 3, 6 y 9 con notables resultados en campo.",
         "team": "Nuestro Equipo",
         "history": "Historia",
         "card1-title": "Mauris fermentum at est in interdum",
         "card2-title": "Mauris fermentum at est in interdum",
         "card3-title": "Mauris fermentum at est in interdum",
-        "card1-content": "Pellentesque scelerisque eleifend nisi non vulputate. Donec orci diam, mollis sit amet vehicula at, semper mattis risus.",
-        "card2-content": "Pellentesque scelerisque eleifend nisi non vulputate. Donec orci diam, mollis sit amet vehicula at, semper mattis risus. Praesent aliquam mi sed lacinia interdum. Mauris volutpat orci ante, quis pharetra erat vestibulum placerat. Nullam pharetra sit amet risus id aliquam. Pellentesque et augue nec tortor commodo iaculis id eu justo.",
-        "card3-content": "Pellentesque scelerisque eleifend nisi non vulputate. Donec orci diam, mollis sit amet vehicula at, semper mattis risus. Praesent aliquam mi sed lacinia interdum. Mauris volutpat orci ante, quis pharetra erat vestibulum placerat. Nullam pharetra sit amet risus id aliquam. Pellentesque et augue nec tortor commodo iaculis id eu justo."
+        "card4-title": "Mauris fermentum at est in interdum",
+        "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
+        "card2-content": "Una vez observados los beneficios de nuestro producto a nivel de campo y gracias a la adjudicación de un  proyecto Innova Chile (Corfo) llamado “Solución sanitaria de la mortalidad de salmón mediante la valorización de los ensilados para su aplicación en nutrición vegetal”,  el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el Instituto de Investigación Agropecuarias (INIA), cuyos resultados ratificaron las observaciones preliminares.",
+        "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
+        "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola."
     },
     "TechnicalSection": {
         "title": "Sección Técnica",
