--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,1 +1,125 @@
-{}
+{
+    "Navbar": {
+        "home": "Home",
+        "aboutUs": "About Us",
+        "products": "Products",
+        "dropdown1": "Vegetal Nutricion",
+        "dropdown11": "Fertilizantes foliares",
+        "dropdown12": "Foliar Fertilizers",
+        "dropdown13": "Root Biostimulants",
+        "dropdown2": "Adjuvant Insecticide",
+        "network": "Distribution network",
+        "technical": "Technical Zone",
+        "contact": "Contact"
+    },
+    "Home": {
+        "MainText": "We help you on your business production",
+        "products": "Our products",
+        "card1": "Foliar Fertilizers",
+        "description1": "The best combination of amino acids for stress management and optimization of various functions in the plant.",
+        "card2": "Organic Amendments",
+        "description2": "Liquid Organic Matter that reactivates the life of the soil, optimizing the use of resources and maximizing the productive potential.",
+        "card3": "Natural oil for agricultural use",
+        "description3": "Insecticide, adjuvant and organic biostimulant of great performance and friendly to the environment."
+    },
+    "AboutUs": {
+        "title": "About Us",
+        "subtitle": "The power of nature",
+        "paragraph1": "We are a Chilean agricultural company, dedicated to the manufacture and commercialization of amino acids, organic matter and oil, for the nutrition and biostimulation of plants, reactivation of life in soils and crop protection. It is part of the holding company Fiordo Austral, the world's leading producer of proteins and oils made from SALMON.",
+        "paragraph2": "The differentiating characteristics of Salmon as raw material are unique. Its marine origin gives it one of the highest biological quality proteins, so through different industrial processes, it is possible to obtain valuable combinations of amino acids and peptides, a rich liquid organic matter and omega 3, 6 and 9 essential oils with remarkable results in the field.",
+        "team": "Our Team",
+        "history": "History",
+        "card1-title": "Mauris fermentum at est in interdum",
+        "card2-title": "Mauris fermentum at est in interdum",
+        "card3-title": "Mauris fermentum at est in interdum",
+        "card4-title": "Mauris fermentum at est in interdum",
+        "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
+        "card2-content": "Una vez observados los beneficios de nuestro producto a nivel de campo y gracias a la adjudicación de un  proyecto Innova Chile (Corfo) llamado “Solución sanitaria de la mortalidad de salmón mediante la valorización de los ensilados para su aplicación en nutrición vegetal”,  el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el Instituto de Investigación Agropecuarias (INIA), cuyos resultados ratificaron las observaciones preliminares.",
+        "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
+        "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola."
+    },
+    "TechnicalSection": {
+        "title": "Sección Técnica",
+        "more": "Ver más"
+    },
+    "Network": {
+        "title": "Red de Distribución",
+        "option1": "Chile",
+        "option2": "Exterior"
+    },
+
+    "Products": {
+        "fertilizers": {
+            "title": "Fertilizantes foliares"
+        },
+        "amendments": {
+            "title": "Enmiendas orgánicas",
+            "mame": "Bioamino-L",
+            "description1": "Es una enmienda  Organica Liquida pars activar  suelos, con alto contenido de materia organica de origen no húmico, acidos fúlvicos, polipéptidos de muy alta calidad biológica, macronutrientes (Nitrógeno, Fósforo, Potasio, Calcio, Magnesio) y micronuirienies (Zinc, Manganeso, Hierro).",
+            "description2": "Proporciona una mejora sustancial de las propiedades fisico-químicas del suelo.",
+            "description3": "Estimula  la formación do una capa superficial orgánica en el suelo, debido al aporte de materia orgánica activa.",
+            "description4": "Favorece la villa orgánica y los micro organismos del suelo.",
+            "description5": "Aumenta la aireación, la capacidad de intercambio cationico (CIC), y la retención de humedad en los suelos.",
+            "description6": "Mejora el crecimiento del sistema radical de las plantas.",
+            "description7": "Incrementa la tasa de mineralización do nitrógeno del suelo.",
+            "description8": "Reemplaza aplicaciones de güanos compostados o frescos."
+        },
+        "rootBiostimulant": {
+            "title": "Bioestimulantes de raíces",
+            "name": "Aminoroot",
+            "description1": "Bioestimulante de raíces a base de aminoácidos libres, estractos vegetales, ácidos fúlvicos y materia orgánica activa, destinado a promover y fortalecer el crecimiento radical en todo tipo de frutales, hortalizas y cultivos.",
+            "description2": "Estimula el crecimiento de raíces induciendo un sistema radical abundante y vigoroso.",
+            "description3": "Mejora la vitalidad de las plantas provocando una mejor captación y absorción de nutrientes y agua.",
+            "description4": "Induce formaciónn de plantas más sanas, resistentes y vigorosas.",
+            "description5": "Provoca un rápido crecimiento al establecimiento."
+        },
+        "insecticide": {
+            "title": "Insecticida y coadyuvante",
+            "name": "SalmonOil",
+            "description": "Es un insecticida natural, formado a partir de mezclas de diferentes tipos de aceites de salmón, funciona por contacto. Al ser aplicado sobre las plantas e insectos, genera una película la que tapa las vias respiratorias de las plagas provocando su muerte por asfixia.",
+            "description2": "También puede ser utilizado como adherente o coadyuvante para mejorar la eficiencia de otros productos fitosanitarios como fungicidas, insecticidas y herbicidas."
+        },
+        "buttons": {
+            "label": "Etiqueta",
+            "datasheet": "Ficha técnica",
+            "safetysheet": "Hoja de seguridad",
+            "brochure": "Brochure"
+        }
+    },
+    "Contact": {
+        "title": "Contacto",
+        "office": "Oficina",
+        "name": "Nombre",
+        "phone": "Teléfono",
+        "matter": "Asunto",
+        "message": "Mensaje",
+        "send": "Enviar",
+        "fullname": "Nombre Completo",
+        "typeMessage": "Escribe tu mensaje aquí",
+        "typeEmail": "Ingrese Correo Electrónico",
+        "contactUs": "Contáctanos",
+        "writeUs": "Escribenos un mensaje"
+    },
+    "Login": {
+        "loginNav": "Ingresa",
+        "remember": "Recuerdame",
+        "button": "Ingresar",
+        "login": "Iniciar Sesión",
+        "notAccount": "¿Aún no tienes cuenta?",
+        "register": "Registrarse",
+        "forgotPass": "Olvidé mi contraseña"
+    },
+    "Register": {
+        "register": "Registro",
+        "info": "Completa los siguientes datos",
+        "button": "Registro",
+        "accountReady": "¿Ya tienes una cuenta?",
+        "terms": "He leído y acepto los términos y condiciones de uso."
+    },
+    "Forgot": {
+        "title": "¿Olvidaste tu contraseña?",
+        "subtitle": "Ingresa tu correo electrónico y te enviaremos las instrucciones para reestablecer el acceso a tu cuenta",
+        "button": "Solicitar instrucciones"
+    }
+}
+
