FIX: main text changed

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -13,7 +13,7 @@
         "contact": "Contacto"
     },
     "Home": {
-        "MainText": "Ayudamos en la producción de tu negocio",
+        "MainText": "La fuerza de la naturaleza",
         "products": "Nuestros productos",
         "card1": "Fertilizantes bioestimulantes",
         "description1": "La mejor combinación de Aminoácidos para el manejo del stress y la optimización de diversas funciones en la planta.",
