FIX: Some changes on pictures done.

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -34,7 +34,7 @@
         "card3-title": "Mauris fermentum at est in interdum",
         "card4-title": "Mauris fermentum at est in interdum",
         "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
-        "card2-content": "Una vez observados los beneficios de nuestro producto a nivel de campo y gracias a la adjudicación de un  proyecto Innova Chile (Corfo) llamado “Solución sanitaria de la mortalidad de salmón mediante la valorización de los ensilados para su aplicación en nutrición vegetal”,  el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el Instituto de Investigación Agropecuarias (INIA), cuyos resultados ratificaron las observaciones preliminares.",
+        "card2-content": "Gracias a la adjudicación de un  proyecto Innova Chile (Corfo) el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el INIA, cuyos resultados ratificaron las observaciones preliminares.",
         "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
         "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola."
     },
