CHG: dashboard text added

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -44,7 +44,20 @@
         "tab-1": "I+D",
         "tab-2": "Publicaciones",
         "tab-3": "Actividades",
-        "tab-4": "Noticias"
+        "tab-4": "Noticias",
+        "tab-5": "Editar",
+        "new-entry": "Agregar nueva entrada",
+        "table-id": "Id",
+        "table-title": "Título",
+        "table-author": "Autor",
+        "table-date": "Fecha",
+        "button-modified": "Modificar",
+        "button-deleted": "Eliminar",
+        "modal-title": "Título",
+        "modal-content": "Contenido",
+        "modal-category": "Categoría",
+        "button-send": "Enviar",
+        "button-cancel": "Cancelar"
     },
     "Network": {
         "title": "Red de Distribución",
