FIX: name fixed in amendments

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -71,7 +71,7 @@
         },
         "amendments": {
             "title": "Enmiendas orgánicas",
-            "mame": "Bioamino-L",
+            "name": "Bioamino-L",
             "description1": "Es una enmienda  Organica Liquida pars activar  suelos, con alto contenido de materia organica de origen no húmico, acidos fúlvicos, polipéptidos de muy alta calidad biológica, macronutrientes (Nitrógeno, Fósforo, Potasio, Calcio, Magnesio) y micronuirienies (Zinc, Manganeso, Hierro).",
             "description2": "Proporciona una mejora sustancial de las propiedades fisico-químicas del suelo.",
             "description3": "Estimula  la formación do una capa superficial orgánica en el suelo, debido al aporte de materia orgánica activa.",
