FIX: product description modified

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -73,13 +73,10 @@
             "title": "Enmiendas orgánicas",
             "name": "Bioamino-L",
             "description1": "Es una enmienda  Organica Liquida pars activar  suelos, con alto contenido de materia organica de origen no húmico, acidos fúlvicos, polipéptidos de muy alta calidad biológica, macronutrientes (Nitrógeno, Fósforo, Potasio, Calcio, Magnesio) y micronuirienies (Zinc, Manganeso, Hierro).",
-            "description2": "Proporciona una mejora sustancial de las propiedades fisico-químicas del suelo.",
-            "description3": "Estimula  la formación do una capa superficial orgánica en el suelo, debido al aporte de materia orgánica activa.",
-            "description4": "Favorece la villa orgánica y los micro organismos del suelo.",
-            "description5": "Aumenta la aireación, la capacidad de intercambio cationico (CIC), y la retención de humedad en los suelos.",
-            "description6": "Mejora el crecimiento del sistema radical de las plantas.",
-            "description7": "Incrementa la tasa de mineralización do nitrógeno del suelo.",
-            "description8": "Reemplaza aplicaciones de güanos compostados o frescos."
+            "description2": "Renueva la vida en los suelos, activando la microbiología, mejorando su estructura y disponibilidad.",
+            "description3": "Activa y fortalece las raíces.",
+            "description4": "Optimiza la conexión planta/sustrato.",
+            "description5": "Mejor suelo, mayor potencial, mejor resultado."
         },
         "rootBiostimulant": {
             "title": "Aceite natural de uso agrícola",
