CHG: title conocenos ready with language change

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -20,7 +20,8 @@
         "card2": "Organic Amendments",
         "description2": "Liquid Organic Matter that reactivates the life of the soil, optimizing the use of resources and maximizing the productive potential.",
         "card3": "Natural oil for agricultural use",
-        "description3": "Insecticide, adjuvant and organic biostimulant of great performance and friendly to the environment."
+        "description3": "Insecticide, adjuvant and organic biostimulant of great performance and friendly to the environment.",
+        "meet": "Meet Us"
     },
     "AboutUs": {
         "title": "About Us",
