--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -20,7 +20,8 @@
         "card2": "Enmiendas Orgánicas",
         "description2": "Materia Orgánica liquida que reactiva la vida del suelo, optimizando el uso de los recursos y maximizando el potencial productivo.",
         "card3": "Aceite natural de uso agrícola",
-        "description3": "Insecticida, Coadyuvante y bioestimulante orgánico de gran desempeño y amigable con el medio ambiente. "
+        "description3": "Insecticida, Coadyuvante y bioestimulante orgánico de gran desempeño y amigable con el medio ambiente. ",
+        "meet": "Conócenos"
     },
     "AboutUs": {
         "title": "Quienes Somos",
