CHG: inglish update and ready

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -37,7 +37,10 @@
         "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
         "card2-content": "Gracias a la adjudicación de un  proyecto Innova Chile (Corfo) el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el INIA, cuyos resultados ratificaron las observaciones preliminares.",
         "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
-        "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola."
+        "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola.",
+        "cargo1":"Gerente general",
+        "cargo2":"Subgerente técnico",
+        "cargo3":"Asistente técnico"
     },
     "TechnicalSection": {
         "title": "Información Técnica",
