CHG: list manager added to list

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -43,7 +43,8 @@
         "card4-content": "The development of new alternatives begins using the same raw material. Thus, it is possible to create and consolidate a business area dedicated to providing innovative and efficient solutions to the agricultural sector.",
         "cargo1":"General Manager",
         "cargo2":"Technical assistant manager",
-        "cargo3":"Technical assistant"
+        "cargo3":"Technical assistant",
+        "cargo4": "National sales assistant manager"
     },
     "TechnicalSection": {
         "title": "technical zone",
