--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -43,7 +43,8 @@
         "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola.",
         "cargo1":"Gerente general",
         "cargo2":"Subgerente técnico",
-        "cargo3":"Asistente técnico"
+        "cargo3":"Asistente técnico",
+        "cargo4":"Subgerente venta nacional"
     },
     "TechnicalSection": {
         "title": "Información Técnica",
