FIX: Fixed post management reactive at front
Signed-off-by: Sebastian Salazar <sebastian.salazar@progressio.cl>

--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -11,7 +11,7 @@
         "network": "Red de Distribución",
         "technical": "Información Técnica",
         "contact": "Contacto",
-        "language": "idioma",
+        "language": "Idioma",
         "spanish":"Español",
         "english":"Ingles"
     },
