--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -1,146 +1,146 @@
 {
-    "Navbar": {
-        "home": "Inicio",
-        "aboutUs": "Quiénes somos",
-        "products": "Productos",
-        "dropdown1": "Nutrición Vegetal",
-        "dropdown11": "Fertilizantes bioestimulantes",
-        "dropdown12": "Enmiendas orgánicas",
-        "dropdown13": "Aceite natural de uso agrícola",
-        "dropdown2": "Insecticida Coadyuvante",
-        "network": "Red de Distribución",
-        "technical": "Información Técnica",
-        "contact": "Contacto",
-        "language": "Idioma",
-        "spanish":"Español",
-        "english":"Ingles"
-    },
-    "Home": {
-        "MainText": "La fuerza de la naturaleza",
-        "products": "Nuestros productos",
-        "card1": "Fertilizantes bioestimulantes",
-        "description1": "La mejor combinación de Aminoácidos para el manejo del stress y la optimización de diversas funciones en la planta.",
-        "card2": "Enmiendas Orgánicas",
-        "description2": "Materia Orgánica liquida que reactiva la vida del suelo, optimizando el uso de los recursos y maximizando el potencial productivo.",
-        "card3": "Aceite natural de uso agrícola",
-        "description3": "Insecticida, Coadyuvante y bioestimulante orgánico de gran desempeño y amigable con el medio ambiente. ",
-        "meet": "Conócenos"
-    },
-    "AboutUs": {
-        "title": "Quienes Somos",
-        "subtitle": "La fuerza de la naturaleza",
-        "paragraph1": "Somos una compañía agrícola Chilena,  dedicada a la fabricación y comercialización de aminoácidos, materia orgánica y aceite, para la nutrición y bioestimulación de las plantas, reactivación de la vida en los suelos y protección de cultivos. Es parte del holding Fiordo Austral, principal productor mundial de proteínas y aceites elaborados a partir del SALMÓN.",
-        "paragraph2": "Las características diferenciadoras  del Salmón como materia prima son únicas. Su origen marino le confieren una de las proteínas de más alta calidad biológica, por lo que a través de distintos procesos industriales, es posible obtener valiosas combinaciones de aminoácidos y péptidos, una rica materia orgánica liquida y aceites esenciales omega 3, 6 y 9 con notables resultados en campo.",
-        "team": "Nuestro Equipo",
-        "history": "Historia",
-        "card1-title": "Mauris fermentum at est in interdum",
-        "card2-title": "Mauris fermentum at est in interdum",
-        "card3-title": "Mauris fermentum at est in interdum",
-        "card4-title": "Mauris fermentum at est in interdum",
-        "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
-        "card2-content": "Gracias a la adjudicación de un  proyecto Innova Chile (Corfo) el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el INIA, cuyos resultados ratificaron las observaciones preliminares.",
-        "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
-        "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola.",
-        "cargo1":"Gerente general",
-        "cargo2":"Subgerente técnico",
-        "cargo3":"Asistente técnico",
-        "cargo4":"Subgerente venta nacional"
-    },
-    "TechnicalSection": {
-        "title": "Información Técnica",
-        "more": "Ver más",
-        "tab-1": "Investigación y Desarrollo",
-        "tab-2": "Publicaciones",
-        "tab-3": "Actividades",
-        "tab-4": "Noticias",
-        "tab-5": "Editar",
-        "new-entry": "Agregar nueva entrada",
-        "table-id": "Id",
-        "table-title": "Título",
-        "table-author": "Autor",
-        "table-date": "Fecha",
-        "button-modified": "Modificar",
-        "button-deleted": "Eliminar",
-        "modal-title": "Título",
-        "modal-content": "Contenido",
-        "modal-category": "Categoría",
-        "button-send": "Enviar",
-        "button-cancel": "Cancelar"
-    },
-    "Network": {
-        "title": "Red de Distribución",
-        "option1": "Chile",
-        "option2": "Mundo"
-    },
+  "Navbar": {
+    "home": "Inicio",
+    "aboutUs": "Quiénes somos",
+    "products": "Productos",
+    "dropdown1": "Nutrición Vegetal",
+    "dropdown11": "Fertilizantes Bioestimulantes",
+    "dropdown12": "Enmiendas Orgánicas",
+    "dropdown13": "Aceite natural de uso agrícola",
+    "dropdown2": "Insecticida Coadyuvante",
+    "network": "Red de Distribución",
+    "technical": "Información Técnica",
+    "contact": "Contacto",
+    "language": "Idioma",
+    "spanish": "Español",
+    "english": "Ingles"
+  },
+  "Home": {
+    "MainText": "La fuerza de la naturaleza",
+    "products": "Nuestros productos",
+    "card1": "Fertilizantes Bioestimulantes",
+    "description1": "La mejor combinación de Aminoácidos para el manejo del stress y la optimización de diversas funciones en la planta.",
+    "card2": "Enmiendas Orgánicas",
+    "description2": "Materia Orgánica liquida que reactiva la vida del suelo, optimizando el uso de los recursos y maximizando el potencial productivo.",
+    "card3": "Aceite natural de uso agrícola",
+    "description3": "Insecticida, Coadyuvante y bioestimulante orgánico de gran desempeño y amigable con el medio ambiente. ",
+    "meet": "Conócenos"
+  },
+  "AboutUs": {
+    "title": "Quienes Somos",
+    "subtitle": "La fuerza de la naturaleza",
+    "paragraph1": "Somos una compañía agrícola Chilena,  dedicada a la fabricación y comercialización de aminoácidos, materia orgánica y aceite, para la nutrición y bioestimulación de las plantas, reactivación de la vida en los suelos y protección de cultivos. Es parte del holding Fiordo Austral, principal productor mundial de proteínas y aceites elaborados a partir del SALMÓN.",
+    "paragraph2": "Las características diferenciadoras  del Salmón como materia prima son únicas. Su origen marino le confieren una de las proteínas de más alta calidad biológica, por lo que a través de distintos procesos industriales, es posible obtener valiosas combinaciones de aminoácidos y péptidos, una rica materia orgánica liquida y aceites esenciales omega 3, 6 y 9 con notables resultados en campo.",
+    "team": "Nuestro Equipo",
+    "history": "Historia",
+    "card1-title": "Mauris fermentum at est in interdum",
+    "card2-title": "Mauris fermentum at est in interdum",
+    "card3-title": "Mauris fermentum at est in interdum",
+    "card4-title": "Mauris fermentum at est in interdum",
+    "card1-content": "En 1994 para dar solución a la problemática medioambiental generada por los residuos de la industria salmonera en Chile, nace de la idea de producir un bioestimulante a partir de la hidrólisis enzimática de la proteína del salmón.",
+    "card2-content": "Gracias a la adjudicación de un  proyecto Innova Chile (Corfo) el producto es sometido a múltiples pruebas de eficacia bajo métodos científicos, en colaboración con el INIA, cuyos resultados ratificaron las observaciones preliminares.",
+    "card3-content": "Así nace AMINOTERRA®, fertilizante bioestimulante rico en aminoácidos libres y peptidos de cadena corta, considerado como un  producto Chileno único en el mundo por su procedencia y beneficios  en  distintas especies vegetales.",
+    "card4-content": "Comienza el desarrollo de nuevas alternativas utilizando la misma materia prima. Así se logra crear y consolidar un área de negocios dedicada a dar soluciones innovadoras y eficientes al sector agrícola.",
+    "cargo1": "Gerente general",
+    "cargo2": "Subgerente técnico",
+    "cargo3": "Asistente técnico",
+    "cargo4": "Subgerente venta nacional"
+  },
+  "TechnicalSection": {
+    "title": "Información Técnica",
+    "more": "Ver más",
+    "tab-1": "Investigación y Desarrollo",
+    "tab-2": "Publicaciones",
+    "tab-3": "Actividades",
+    "tab-4": "Noticias",
+    "tab-5": "Editar",
+    "new-entry": "Agregar nueva entrada",
+    "table-id": "Id",
+    "table-title": "Título",
+    "table-author": "Autor",
+    "table-date": "Fecha",
+    "button-modified": "Modificar",
+    "button-deleted": "Eliminar",
+    "modal-title": "Título",
+    "modal-content": "Contenido",
+    "modal-category": "Categoría",
+    "button-send": "Enviar",
+    "button-cancel": "Cancelar"
+  },
+  "Network": {
+    "title": "Red de Distribución",
+    "option1": "Chile",
+    "option2": "Mundo"
+  },
 
-    "Products": {
-        "fertilizers": {
-            "title": "Fertilizantes bioestimulantes"
-        },
-        "amendments": {
-            "title": "Enmiendas orgánicas",
-            "name": "Bioamino-L",
-            "description1": "Es una enmienda  Organica Liquida pars activar  suelos, con alto contenido de materia organica de origen no húmico, acidos fúlvicos, polipéptidos de muy alta calidad biológica, macronutrientes (Nitrógeno, Fósforo, Potasio, Calcio, Magnesio) y micronuirienies (Zinc, Manganeso, Hierro).",
-            "description2": "Renueva la vida en los suelos, activando la microbiología, mejorando su estructura y disponibilidad.",
-            "description3": "Activa y fortalece las raíces.",
-            "description4": "Optimiza la conexión planta/sustrato.",
-            "description5": "Mejor suelo, mayor potencial, mejor resultado."
-        },
-        "rootBiostimulant": {
-            "title": "Aceite natural de uso agrícola",
-            "name": "Aminoroot",
-            "description1": "Bioestimulante de raíces a base de aminoácidos libres, estractos vegetales, ácidos fúlvicos y materia orgánica activa, destinado a promover y fortalecer el crecimiento radical en todo tipo de frutales, hortalizas y cultivos.",
-            "description2": "Estimula el crecimiento de raíces induciendo un sistema radical abundante y vigoroso.",
-            "description3": "Mejora la vitalidad de las plantas provocando una mejor captación y absorción de nutrientes y agua.",
-            "description4": "Induce formaciónn de plantas más sanas, resistentes y vigorosas.",
-            "description5": "Provoca un rápido crecimiento al establecimiento."
-        },
-        "insecticide": {
-            "title": "Insecticida y coadyuvante",
-            "name": "SalmonOil",
-            "description": "Es un insecticida natural, formado a partir de mezclas de diferentes tipos de aceites de salmón, funciona por contacto. Al ser aplicado sobre las plantas e insectos, genera una película la que tapa las vias respiratorias de las plagas provocando su muerte por asfixia.",
-            "description2": "También puede ser utilizado como adherente o coadyuvante para mejorar la eficiencia de otros productos fitosanitarios como fungicidas, insecticidas y herbicidas."
-        },
-        "buttons": {
-            "label": "Etiqueta",
-            "datasheet": "Ficha técnica",
-            "safetysheet": "Hoja de seguridad",
-            "brochure": "Brochure"
-        }
+  "Products": {
+    "fertilizers": {
+      "title": "Fertilizantes Bioestimulantes"
     },
-    "Contact": {
-        "title": "Contacto",
-        "office": "Oficina",
-        "name": "Nombre",
-        "phone": "Teléfono",
-        "matter": "Asunto",
-        "message": "Mensaje",
-        "send": "Enviar",
-        "fullname": "Nombre Completo",
-        "typeMessage": "Escribe tu mensaje aquí",
-        "typeEmail": "Ingrese Correo Electrónico",
-        "contactUs": "Contáctanos",
-        "writeUs": "Escribenos un mensaje"
+    "amendments": {
+      "title": "Enmiendas Orgánicas",
+      "name": "Bioamino-L",
+      "description1": "Es una enmienda  Organica Liquida pars activar  suelos, con alto contenido de materia organica de origen no húmico, acidos fúlvicos, polipéptidos de muy alta calidad biológica, macronutrientes (Nitrógeno, Fósforo, Potasio, Calcio, Magnesio) y micronuirienies (Zinc, Manganeso, Hierro).",
+      "description2": "Renueva la vida en los suelos, activando la microbiología, mejorando su estructura y disponibilidad.",
+      "description3": "Activa y fortalece las raíces.",
+      "description4": "Optimiza la conexión planta/sustrato.",
+      "description5": "Mejor suelo, mayor potencial, mejor resultado."
     },
-    "Login": {
-        "loginNav": "Ingresa",
-        "remember": "Recuerdame",
-        "button": "Ingresar",
-        "login": "Iniciar Sesión",
-        "notAccount": "¿Aún no tienes cuenta?",
-        "register": "Registrarse",
-        "forgotPass": "Olvidé mi contraseña"
+    "rootBiostimulant": {
+      "title": "Aceite natural de uso agrícola",
+      "name": "Aminoroot",
+      "description1": "Bioestimulante de raíces a base de aminoácidos libres, estractos vegetales, ácidos fúlvicos y materia orgánica activa, destinado a promover y fortalecer el crecimiento radical en todo tipo de frutales, hortalizas y cultivos.",
+      "description2": "Estimula el crecimiento de raíces induciendo un sistema radical abundante y vigoroso.",
+      "description3": "Mejora la vitalidad de las plantas provocando una mejor captación y absorción de nutrientes y agua.",
+      "description4": "Induce formaciónn de plantas más sanas, resistentes y vigorosas.",
+      "description5": "Provoca un rápido crecimiento al establecimiento."
     },
-    "Register": {
-        "register": "Registro",
-        "info": "Completa los siguientes datos",
-        "button": "Registro",
-        "accountReady": "¿Ya tienes una cuenta?",
-        "terms": "He leído y acepto los términos y condiciones de uso."
+    "insecticide": {
+      "title": "Insecticida y coadyuvante",
+      "name": "SalmonOil",
+      "description": "Es un insecticida natural, formado a partir de mezclas de diferentes tipos de aceites de salmón, funciona por contacto. Al ser aplicado sobre las plantas e insectos, genera una película la que tapa las vias respiratorias de las plagas provocando su muerte por asfixia.",
+      "description2": "También puede ser utilizado como adherente o coadyuvante para mejorar la eficiencia de otros productos fitosanitarios como fungicidas, insecticidas y herbicidas."
     },
-    "Forgot": {
-        "title": "¿Olvidaste tu contraseña?",
-        "subtitle": "Ingresa tu correo electrónico y te enviaremos las instrucciones para reestablecer el acceso a tu cuenta",
-        "button": "Solicitar instrucciones"
+    "buttons": {
+      "label": "Etiqueta",
+      "datasheet": "Ficha técnica",
+      "safetysheet": "Hoja de seguridad",
+      "brochure": "Brochure"
     }
+  },
+  "Contact": {
+    "title": "Contacto",
+    "office": "Oficina",
+    "name": "Nombre",
+    "phone": "Teléfono",
+    "matter": "Asunto",
+    "message": "Mensaje",
+    "send": "Enviar",
+    "fullname": "Nombre Completo",
+    "typeMessage": "Escribe tu mensaje aquí",
+    "typeEmail": "Ingrese Correo Electrónico",
+    "contactUs": "Contáctanos",
+    "writeUs": "Escribenos un mensaje"
+  },
+  "Login": {
+    "loginNav": "Ingresa",
+    "remember": "Recuerdame",
+    "button": "Ingresar",
+    "login": "Iniciar Sesión",
+    "notAccount": "¿Aún no tienes cuenta?",
+    "register": "Registrarse",
+    "forgotPass": "Olvidé mi contraseña"
+  },
+  "Register": {
+    "register": "Registro",
+    "info": "Completa los siguientes datos",
+    "button": "Registro",
+    "accountReady": "¿Ya tienes una cuenta?",
+    "terms": "He leído y acepto los términos y condiciones de uso."
+  },
+  "Forgot": {
+    "title": "¿Olvidaste tu contraseña?",
+    "subtitle": "Ingresa tu correo electrónico y te enviaremos las instrucciones para reestablecer el acceso a tu cuenta",
+    "button": "Solicitar instrucciones"
+  }
 }
